frontend-kube/frontend-deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "frontend-app"
  namespace: "default"
  labels:
    app: "frontend-app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "frontend-app"
  template:
    metadata:
      labels:
        app: "frontend-app"
    spec:
      containers:
      - name: "frontend-app"
        image: "asia-south1-docker.pkg.dev/capable-matrix-441709-b0/artifactregistryattendance/frontend:11"
        resources:
          requests:
            cpu: "250m"         # Requesting 0.5 core
            memory: "512Mi"     # Requesting 512 MB of RAM
          limits:
            cpu: "1000m"        # Limiting to 1 core
            memory: "1024Mi"    # Limiting to 1 GB of RAM
