frontend-kube/frontend1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: asia-south1-docker.pkg.dev/capable-matrix-441709-b0/artifactregistryattendance/my-nestjs-app:latest
          resources:
            requests:
              cpu: "500m"         # Requesting 0.5 core
              memory: "512Mi"     # Requesting 512 MB of RAM
            limits:
              cpu: "1000m"        # Limiting to 1 core
              memory: "1024Mi"    # Limiting to 1 GB of RAM
