frontend-kube/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: "backend"
  name: "backend"
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
