frontend-kube/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: "frontend-app"
  name: "frontend-app"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-app-service
                port:
                  number: 5000
